# nova-collection

modules/indexer/: .gitignore  README.md  bldr.lua
modules/indexer/src/: core.hpp  file_indexer.cpp  file_indexer.hpp  file_searcher.cpp  file_searcher.hpp  main.cpp  node_collate.glsl  node_collate.glsl.hpp  node_collate.slang  shared_types.h  string_search.glsl  string_search.glsl.hpp  string_search.slang  strings.hpp
modules/indexer/test/: main.cpp
modules/launch/: .gitignore  README.md  bldr.lua
modules/launch/src/boxtest/: main.cpp
modules/launch/src/common/: ScopeGuards.hpp  x64Types.hpp
modules/launch/src/database/: Database.cpp  Database.hpp
modules/launch/src/indexer/: FileIndexer.cpp  FileIndexer.hpp  PathTree.hpp  UnicodeCollator.cpp  UnicodeCollator.hpp  fs_index.cpp  fs_index.hpp
modules/launch/src/indexer/win/: FileIndexerWin32.cpp  fs_index_win.cpp
modules/launch/src/nms-index/: nms_Index.cpp
modules/launch/src/nms-launch/: nms_Launch.cpp
modules/launch/src/nms-search/: nms_Platform.cpp  nms_Platform.hpp  nms_Query.hpp  nms_Search.cpp  nms_Search.hpp
modules/launch/src/nomoreshortcuts/: NoMoreShortcuts.cpp  NoMoreShortcuts.hpp  Platform.cpp  Platform.hpp  Query.hpp
modules/launch/src/nomoreshortcuts/core/: FileIndex.cpp  FileIndex.hpp  Index.hpp  Platform.cpp  (+4 more)
modules/launch/src/overlay/: Overlay.cpp  Overlay.hpp
modules/launch/src/winwrap/: MinWinUnicode.h  WinAPIWrapper.cpp  WinAPIWrapper.h
modules/terminal/: .gitignore  CMakeLists.txt  README.md  bldr.lua  icd.cpp  li-win.cpp  li.cpp  main_old.cpp
modules/terminal/test/: cd
(+8 files in other folders)
